--- a/index.css
+++ b/index.css
@@ -21,9 +21,6 @@ html, body, .page, .container {
 body {
   background-color: #292e33;
 }
-svg {
-  fill: #fdfdfd;
-}
 ::placeholder {
   color: #666;
 }
@@ -36,9 +33,8 @@ svg {
 .diffPage {
   display: none;
 }
-.currentList .listPage,
-.currentEdit .editPage,
-.currentDiff .diffPage {
+[data-page="list"] .listPage,
+[data-page="edit"] .editPage {
   display: flex;
 }
 .listPage .results {
@@ -70,13 +66,11 @@ svg {
   margin: 1rem 0;
   flex: 0;
 }
-.backButton,
-.relButton,
-.deleteButton {
+.barButton {
   width: 3rem;
   text-align: center;
 }
-.timer {
+.barText {
   padding: 0 1rem;
 }
 .id {
@@ -94,7 +88,7 @@ select {
 option {
   background-color: #292e33;
 }
-.importance {
+.priority {
   flex: 1;
 }
 .search {
@@ -108,16 +102,23 @@ option {
   background-color: inherit;
   color: inherit;
 }
+.listOrder.searchEmpty option[value="match"] {
+  display: none;
+}
 .item {
   border-bottom: 1px solid #666;
+  border-left: 0.3rem solid rgba(0, 0, 0, 0);
   font-family: monospace;
   overflow: hidden;
 }
 .item.read {
   color: #666;
 }
+.item.draft {
+  border-left-color: #94a7da;
+}
 .item pre {
-  padding: 0.5rem;
+  padding: 0.5rem 0.5rem 0.5rem 0.2rem;
   margin: 0;
 }
 .addButton {
@@ -189,15 +190,12 @@ del {
   background-color: #1a5;
 }
 .related {
-  display: none;
+  display: block;
   background-color: #363b40;
   color: #f1ddc8;
   max-height: 6rem;
   overflow-y: scroll;
   border-top: 2px solid #666;
-}
-.showRelated .related {
-  display: block;
 }
 .related > div {
   height: 1.5rem;
